# mailer

./: .gitignore  .travis.yml  FOOTER.md  LICENSE.txt  README.textile  book.json  colophon.md  contributing.md  installation.md  license.md  setup.cfg  setup.py  tox-dist.ini  tox.ini
.travis/: install.sh
example/: imap.py  maildir.py  mbox.py  smtp.py
examples/: imap.py  maildir.py  mbox.py  simple.py  smtp.py
marrow/: __init__.py
marrow/courriel/: logger.py
marrow/courriel/manager/: pool.py
marrow/courriel/transport/: amazonsms.py  imap.py  log.py  maildir.py  mbox.py  sms.py  smtp.py
marrow/mail/: __init__.py  address.py  exc.py  message.py
marrow/mail/manager/: futures.py  immediate.py  util.py
marrow/mail/transport/: mock.py  smtp.py
marrow/mailer/: __init__.py  address.py  exc.py  interfaces.py  logger.py  message.py  release.py  testing.py  validator.py
marrow/mailer/manager/: dynamic.py  futures.py  immediate.py  transactional.py  util.py
marrow/mailer/transport/: gae.py  imap.py  log.py  maildir.py  mailgun.py  mbox.py  mock.py  postmark.py  sendgrid.py  sendmail.py  ses.py  sms.py  smtp.py
styles/: website.css
test/: test_addresses.py  test_core.py  test_exceptions.py  test_issue_2.py  test_message.py  test_plugins.py  test_validator.py
test/manager/: test_dynamic.py  test_futures.py  test_immediate.py
test/transport/: test_log.py  test_maildir.py  test_mbox.py  test_mock.py  test_smtp.py
tests/: test_addresses.py  test_core.py  test_exceptions.py  test_issue_2.py  test_message.py  test_plugins.py  test_validator.py
tests/manager/: test_dynamic.py  test_futures.py  test_immediate.py
tests/transport/: test_gae.py  test_log.py  test_maildir.py  test_mbox.py  test_mock.py  test_smtp.py
web/ext/: mailer.py
